--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
   <artifactId>Coffee</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Coffee</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>Coffee</name>
   <url>http://maven.apache.org</url>
   <properties>
     <spring-framework.version>5.1.2.RELEASE</spring-framework.version>
